--- a/index.html
+++ b/index.html
@@ -74,34 +74,34 @@
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
       <ul class="collection">
         <li class="collection-item avatar">
-          <p class="title">Title</p>
+          <p class="ch title">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="comida1">First Line</p>
+          <p class="ch" id="comida1">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="musica1">First Line</p>
+          <p class="ch" id="musica1">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="lugar1">First Line</p>
+          <p class="ch" id="lugar1">Cargando<span>.</span><span>.</span><span>.</span></p>
           <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
         </li>
         <li class="collection-item avatar">
-          <p class="title">Title</p>
+          <p class="ch title">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="comida2">First Line</p>
+          <p class="ch" id="comida2">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="musica2">First Line</p>
+          <p class="ch" id="musica2">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="lugar2">First Line</p>
+          <p class="ch" id="lugar2">Cargando<span>.</span><span>.</span><span>.</span></p>
           <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
         </li>
         <li class="collection-item avatar">
-          <p class="title">Title</p>
+          <p class="ch title">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="comida3">First Line</p>
+          <p class="ch" id="comida3">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="musica3">First Line</p>
+          <p class="ch" id="musica3">Cargando<span>.</span><span>.</span><span>.</span></p>
           <br>
-          <p id="lugar3">First Line</p>
-          <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+          <p class="ch" id="lugar3">Cargando<span>.</span><span>.</span><span>.</span></p>
+          <a class="secondary-content"><i class="material-icons">grade</i></a>
         </li>
       </ul>
     </div>
